[package]
name = "process_videos"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "~4.0"
image = "~0.23"
num_cpus = "1.13.0"
threadpool = "1.8.0"







